Remove Wildfly version
Since the same example is used for Wildfly 10, it's somehow confusing to see "Welcome to WF8".

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -209,7 +209,7 @@
 
  <section class='container'>
           <hgroup>
-            <h1>Welcome to your WildFly 8 application on OpenShift</h1>
+            <h1>Welcome to your WildFly application on OpenShift</h1>
           </hgroup>
 
 
